kube/service.yml
apiVersion: v1
kind: Service
metadata:
  name: jela-io-http
  namespace: prod-jela-io
  labels:
    app.kubernetes.io/name: jela.io
    app.kubernetes.io/managed-by: jela.io
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app.kubernetes.io/name: jela.io
